k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-okteto
spec:
  selector:
    matchLabels:
      app: test-okteto
  replicas: 1
  template:
    metadata:
      labels:
        app: test-okteto
    spec:
      containers:
      - name: test-okteto
        image: docker-registry.default.svc:5000/sandbox-cwis-cs/hello-world
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
