k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: test-okteto
spec:
  type: LoadBalancer
  ports:
    - name: tcp-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: test-okteto
